--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -9,8 +9,12 @@
 
   <ItemGroup>
     <None Remove="Resources\Images\add.png" />
+    <None Remove="Resources\Images\add2.png" />
     <None Remove="Resources\Images\delete.png" />
     <None Remove="Resources\Images\edit.png" />
+    <None Remove="Resources\Images\hamburger.png" />
+    <None Remove="Resources\Images\help.png" />
+    <None Remove="Resources\Images\sheraton.jpg" />
     <None Remove="Resources\Images\view.png" />
   </ItemGroup>
 
@@ -27,6 +31,17 @@
     <Content Include="Resources\Images\view.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Images\add2.png" />
+    <Resource Include="Resources\Images\hamburger.png" />
+    <Resource Include="Resources\Images\help.png" />
+    <Resource Include="Resources\Images\sheraton.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Resources\Images\Accomodations\" />
   </ItemGroup>
 
 </Project>
