feat: Made Body for Adding Tours

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -52,6 +52,7 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\Accomodations\" />
+    <Folder Include="Resources\Images\Tours\" />
   </ItemGroup>
 
 </Project>
