feat: Assign grade window and notifications
-Added and changed assign grade window
-Added small notifications for ungraded reservations
-Small changes in Review Model
-Added ReviewDTO

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
+    <None Remove="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
     <None Remove="Resources\Images\add.png" />
     <None Remove="Resources\Images\add2.png" />
     <None Remove="Resources\Images\delete.png" />
@@ -34,14 +36,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
+    <Resource Include="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
     <Resource Include="Resources\Images\add2.png" />
     <Resource Include="Resources\Images\hamburger.png" />
     <Resource Include="Resources\Images\help.png" />
     <Resource Include="Resources\Images\sheraton.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\Accomodations\" />
   </ItemGroup>
 
 </Project>
