--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -26,6 +26,7 @@
     <None Remove="Resources\Images\help.png" />
     <None Remove="Resources\Images\home.png" />
     <None Remove="Resources\Images\live.png" />
+    <None Remove="Resources\Images\normal-home-icon.png" />
     <None Remove="Resources\Images\notification-request-icon.png" />
     <None Remove="Resources\Images\notification-review-icon.png" />
     <None Remove="Resources\Images\owner-icon.png" />
@@ -91,6 +92,7 @@
     <Resource Include="Resources\Images\help.png" />
     <Resource Include="Resources\Images\home.png" />
     <Resource Include="Resources\Images\live.png" />
+    <Resource Include="Resources\Images\normal-home-icon.png" />
     <Resource Include="Resources\Images\notification-request-icon.png" />
     <Resource Include="Resources\Images\notification-review-icon.png" />
     <Resource Include="Resources\Images\owner-icon.png" />
@@ -126,6 +128,12 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\Accomodations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\Data\voucher.csv">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 
 </Project>
