--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
+    <None Remove="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
     <None Remove="Resources\Images\Icons\calendar-icon.png" />
     <None Remove="Resources\Images\Icons\cancel-event-icon.png" />
     <None Remove="Resources\Images\Icons\cancel-icon.png" />
@@ -84,6 +86,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
+    <Resource Include="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
     <Resource Include="Resources\Images\Icons\cancel-icon.png" />
     <Resource Include="Resources\Images\Icons\confirm-icon.png" />
     <Resource Include="Resources\Images\Icons\house-icon.png" />
@@ -138,10 +142,6 @@
     <Resource Include="Resources\Images\Tours\Vienna5.jpg" />
     <Resource Include="Resources\Images\Tours\Vienna6.jpg" />
     <Resource Include="Resources\Images\trash.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Resources\Images\Accomodations\" />
   </ItemGroup>
 
 </Project>
