feat: Implemented Review accommodation modal dialog
- Linked modal dialog with cards and reservations page
- Added new icons

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -11,6 +11,7 @@
     <None Remove="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
     <None Remove="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
     <None Remove="Resources\Images\Icons\calendar-icon.png" />
+    <None Remove="Resources\Images\Icons\camera-icon.png" />
     <None Remove="Resources\Images\Icons\cancel-event-icon.png" />
     <None Remove="Resources\Images\Icons\cancel-icon.png" />
     <None Remove="Resources\Images\Icons\confirm-icon.png" />
@@ -89,6 +90,7 @@
   <ItemGroup>
     <Resource Include="Resources\Images\Accomodations\360_F_129692052_B3NtnybQl1E6vP6HcsHJbvNAnEFffXBh.jpg" />
     <Resource Include="Resources\Images\Accomodations\benefits-penthouse-living-main-image.png" />
+    <Resource Include="Resources\Images\Icons\camera-icon.png" />
     <Resource Include="Resources\Images\Icons\cancel-icon.png" />
     <Resource Include="Resources\Images\Icons\confirm-icon.png" />
     <Resource Include="Resources\Images\Icons\house-icon.png" />
