--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -156,6 +156,14 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\Accomodations\" />
+    <Folder Include="WPF\Android\ViewModels\" />
+    <Folder Include="WPF\Android\Views\" />
+    <Folder Include="WPF\Desktop\ViewModels\" />
+    <Folder Include="WPF\Desktop\Views\" />
+    <Folder Include="WPF\Tablet\ViewModels\" />
+    <Folder Include="WPF\Tablet\Views\" />
+    <Folder Include="WPF\Web\ViewModels\" />
+    <Folder Include="WPF\Web\Views\" />
   </ItemGroup>
 
   <ItemGroup>
