feat: Moved all views to WPF.Android.Views
-Fixed image paths, and moved all views

--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -156,8 +156,8 @@
 
   <ItemGroup>
     <Folder Include="Resources\Images\Accomodations\" />
+    <Folder Include="View\AndroidViews\" />
     <Folder Include="WPF\Android\ViewModels\" />
-    <Folder Include="WPF\Android\Views\" />
     <Folder Include="WPF\Desktop\ViewModels\" />
     <Folder Include="WPF\Desktop\Views\" />
     <Folder Include="WPF\Tablet\ViewModels\" />
