--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -61,6 +61,7 @@
     <None Remove="Resources\Images\notification-review-icon.png" />
     <None Remove="Resources\Images\owner-icon.png" />
     <None Remove="Resources\Images\renovation-icon.png" />
+    <None Remove="Resources\Images\report.png" />
     <None Remove="Resources\Images\request.png" />
     <None Remove="Resources\Images\reservations.png" />
     <None Remove="Resources\Images\reviews.png" />
@@ -142,6 +143,7 @@
     <Resource Include="Resources\Images\notification-review-icon.png" />
     <Resource Include="Resources\Images\owner-icon.png" />
     <Resource Include="Resources\Images\renovation-icon.png" />
+    <Resource Include="Resources\Images\report.png" />
     <Resource Include="Resources\Images\request.png" />
     <Resource Include="Resources\Images\reservations.png" />
     <Resource Include="Resources\Images\reviews.png" />
@@ -175,12 +177,14 @@
     <Folder Include="Resources\Images\Accomodations\" />
     <Folder Include="WPF\Android\ViewModels\" />
     <Folder Include="WPF\Tablet\ViewModels\" />
-    <Folder Include="WPF\Tablet\Views\" />
     <Folder Include="WPF\Web\ViewModels\" />
     <Folder Include="WPF\Web\Views\" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\Data\tourReview.csv">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
     <None Update="Resources\Data\voucher.csv">
       <Generator>MSBuild:Compile</Generator>
     </None>
