--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -14,6 +14,7 @@
     <None Remove="Resources\Images\Accommodations\House.jpeg" />
     <None Remove="Resources\Images\Accommodations\Hut.jpg" />
     <None Remove="Resources\Images\Accommodations\Penthouse.jpeg" />
+    <None Remove="Resources\Images\android-search-icon.png" />
     <None Remove="Resources\Images\eye.png" />
     <None Remove="Resources\Images\finish.png" />
     <None Remove="Resources\Images\default-coupon.png" />
@@ -103,6 +104,7 @@
     <Resource Include="Resources\Images\Accommodations\House.jpeg" />
     <Resource Include="Resources\Images\Accommodations\Hut.jpg" />
     <Resource Include="Resources\Images\Accommodations\Penthouse.jpeg" />
+    <Resource Include="Resources\Images\android-search-icon.png" />
     <Resource Include="Resources\Images\eye.png" />
     <Resource Include="Resources\Images\finish.png" />
     <Resource Include="Resources\Images\Icons\camera-icon.png" />
