--- a/BookingApp.csproj
+++ b/BookingApp.csproj
@@ -25,6 +25,7 @@
     <None Remove="Resources\Images\Icons\cancel-icon.png" />
     <None Remove="Resources\Images\Icons\confirm-icon.png" />
     <None Remove="Resources\Images\Icons\coupon.png" />
+    <None Remove="Resources\Images\Icons\document-icon.png" />
     <None Remove="Resources\Images\Icons\house-icon.png" />
     <None Remove="Resources\Images\Icons\location-icon.png" />
     <None Remove="Resources\Images\Icons\people-icon.png" />
@@ -114,6 +115,7 @@
     <Resource Include="Resources\Images\Icons\cancel-icon.png" />
     <Resource Include="Resources\Images\Icons\confirm-icon.png" />
     <Resource Include="Resources\Images\Icons\coupon.png" />
+    <Resource Include="Resources\Images\Icons\document-icon.png" />
     <Resource Include="Resources\Images\Icons\house-icon.png" />
     <Resource Include="Resources\Images\Icons\calendar-icon.png" />
     <Resource Include="Resources\Images\Icons\cancel-event-icon.png" />
@@ -168,10 +170,6 @@
     <Resource Include="Resources\Images\Tours\Vienna5.jpg" />
     <Resource Include="Resources\Images\Tours\Vienna6.jpg" />
     <Resource Include="Resources\Images\trash.png" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="WPF\Web\Views\" />
   </ItemGroup>
 
   <ItemGroup>
